--- a/projek/projek/templates/admin/index.html
+++ b/projek/projek/templates/admin/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" dir="ltr">
 	<head>
-
+<h1>welcom</h1>
 		<!-- META DATA -->
 		<meta charset="UTF-8">
 		<meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=0'>
